--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <a href="Lazer Maze Game2.zip" download>
     <button>Download for desktop <i>(.JAR)</i></button>
   </a>   
-  <a href="https://github.com/Kaiswim1/LaserMazeGameJava">
+  <a href="https://github.com/Kaiswim1/LaserMazeGameJava" target="_blank">
   <button class="black">Github Repository</button>
 </a>
   <hr>
